--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ waitress==0.8.10
 WebOb==1.5.1
 zope.deprecation==4.1.2
 zope.interface==4.1.3
+
+
+#git+ssh://git@stash.nasawestprime.com:7999/avail/avail.git@develop#egg=avail
